Fixed some overflow issues

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -13,6 +13,7 @@
   height: 100vh;
   margin: 0px;
   padding: 0px;
+  overflow: hidden;
 }
 
 @import "./components/Navbar/navbar.scss";
