--- a/client/src/_utils.scss
+++ b/client/src/_utils.scss
@@ -23,3 +23,7 @@
   height: 41.3vh;
   overflow: auto;
 }
+
+.overflow-hidden {
+  overflow: hidden;
+}
